timelimit (1.1-3) unstable; urgency=low

  * Fix the watchfile
  * Remove the $Ringlet VCS tags from the watchfile and the rules file
  * Bump standards version to 3.8.0 (no changes)
  * Leave "noopt" and "nostrip" option processing to dpkg-buildpackage
  * Honor the "werror" build option
  * Enable build hardening, disabled by the "nohardening" build option

  * debian/control
    - standards version 3.8.0 (no changes)
  * debian/rules
    - remove the $Ringlet VCS tag
    - let dpkg-buildpackage handle the "noopt" and "nostrip" options and
      set the default CFLAGS
    - pass -Werror to the C compiler if the non-standard "werror" option
      is set in DEB_BUILD_OPTIONS
    - enable build hardening unless "nohardening" is set in DEB_BUILD_OPTIONS
  * debian/watch
    - remove a blank line so that the first non-comment line is indeed
      the "version" one as uscan requires
    - remove the $Ringlet VCS tag

 -- Peter Pentchev <roam@ringlet.net>  Fri, 18 Jul 2008 10:39:56 +0300

timelimit (1.1-2) unstable; urgency=low

  * Conflict with netpipes (Closes: #457444).

 -- Peter Pentchev <roam@ringlet.net>  Sun, 23 Dec 2007 03:06:56 +0200

timelimit (1.1-1) unstable; urgency=low

  * Initial release (Closes: #453290).

 -- Peter Pentchev <roam@ringlet.net>  Wed, 19 Dec 2007 17:34:32 +0200